<resources>
    <string name="app_name">Meal Prep</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_search">Meal Search</string>
    <string name="add_meals_to_db">Add Meals to DB</string>
    <string name="search_meals_by_ingredients">Search Meals by Ingredients</string>
    <string name="search_meal">Search Meal</string>
    <string name="search">Search</string>
    <string name="add_to_database">Add to Database</string>
    <string name="no_data_to_display">No Data to Display</string>
    <string name="meal">meal</string>
    <string name="search_for_meals">Search for Meals</string>
</resources>