<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SearchMealsByIngredient">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextViewSearchIngredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="9dp"
            android:autofillHints=""
            android:ems="12"
            android:inputType="textPersonName"
            android:text="@string/search_meal"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/databaseAdd"
            app:layout_constraintEnd_toStartOf="@+id/search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="20dp"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextViewSearchIngredient"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/databaseAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="206dp"
            android:text="@string/add_to_database"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextViewSearchIngredient" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mealsViewRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        <ScrollView-->
<!--            android:id="@+id/scrollView2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="150dp"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical">-->

<!--                <TextView-->
<!--                    android:id="@+id/mealText"-->
<!--                    android:layout_width="322dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="37dp"-->
<!--                    android:layout_marginTop="24dp"-->
<!--                    android:layout_marginEnd="259dp"-->
<!--                    android:layout_marginBottom="544dp"-->
<!--                    android:text="@string/no_data_to_display" />-->
<!--            </LinearLayout>-->
<!--        </ScrollView>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>